--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,9 +8,9 @@
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
         <mat-icon>favorite</mat-icon>
       </button>
-      <button mat-fab extended color="primary">
-        Primary
-      </button>
+
+      <button mat-button>SignUp</button>
+      <button mat-button>SignIn</button>
     </mat-toolbar>
 
 
