--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,8 +9,8 @@
         <mat-icon>favorite</mat-icon>
       </button>
 
-      <button mat-button>SignUp</button>
-      <button mat-button>SignIn</button>
+      <button mat-button (click)="openDialogSingUp()">SignUp</button>
+      <button mat-button (click)="openDialogSingIn()">SignIn</button>
     </mat-toolbar>
 
 
