--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,17 +1,10 @@
+<mat-toolbar class="navbar">
+  <span style="font-weight:700">Fiverr</span>
+  <span class="example-spacer"></span>
 
-    <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>Fiverr</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-
-      <button mat-button>SignUp</button>
-      <button mat-button>SignIn</button>
-    </mat-toolbar>
+  <a routerLink="/"> Sign in</a>
+  <button mat-stroked-button class="btn">Join</button>
+</mat-toolbar>
 
 
 
