--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,3 +1,32 @@
 .example-spacer {
     flex: 1 1 auto;
+}
+.navbar{
+  background-color: white;
+}
+mat-toolbar{
+  a{
+    text-decoration: none;
+    margin-right: 30px;
+    font-size: 16px;
+    color: #3e3e3e;
   }
+  a:hover{
+    transition: 0.3s;
+    color: #57cc7e;
+  }
+  .btn{
+    border-width: 5px;
+    border-color: #57cc7e;
+    color: #3e3e3e;
+    transition: 0.3s;
+    border-width: 1px;
+    border-color: #3e3e3e;
+  }
+  .btn:hover{
+    background-color: #57cc7e;
+    border-color: #57cc7e;
+    transition: 0.3s;
+  }
+
+}
