--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,13 @@
-<mat-toolbar class="navbar">
-  <span style="font-weight:700">Fiverr</span>
-  <span class="example-spacer"></span>
 
-      <button mat-button>SignUp</button>
-      <button mat-button>SignIn</button>
+    <mat-toolbar color="primary">
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+     
+      </button>
+      <span>Fiverr</span>
+      <span class="example-spacer"></span>
+
+
+      <button mat-button (click)="openDialogSingUp()">SignUp</button>
+      <button mat-button (click)="openDialogSingIn()">SignIn</button>
     </mat-toolbar>
-
-
 
