--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,8 +6,8 @@
       <span>Fiverr</span>
       <span class="example-spacer"></span>
 
-      <a (click)="openDialogSingUp()"> Sign in</a>
-      <button mat-stroked-button class="btn" (click)="openDialogSingIn()">Join</button>
+      <a (click)="openDialogSingIn()"  > Sign in </a>
+      <button mat-stroked-button class="btn" (click)="openDialogSingUp()">Join</button>
 
     </mat-toolbar>
 
