--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,13 +6,13 @@
                     
         <div class="row_form">
            <mat-form-field appearance="outline">
-               <mat-label>full Name</mat-label>
-               <input  matInput placeholder="First Name" formControlName="firstName">
+               <mat-label>Full Name</mat-label>
+               <input  matInput placeholder="enter your full name" formControlName="firstName">
              </mat-form-field>
    
              <mat-form-field appearance="outline">
-               <mat-label>User Name</mat-label>
-               <input  matInput placeholder="last Name" formControlName="lastName">
+               <mat-label>Username</mat-label>
+               <input  matInput placeholder="enter a username" formControlName="lastName">
               
 
              </mat-form-field>
