--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,9 +11,10 @@
       <a routerLink="">Orders</a>
 
 
-      <a (click)="openDialogSingUp()"> Sign in</a>
-      <button mat-stroked-button class="btn" (click)="openDialogSingIn()">Join</button>
+      <a (click)="openDialogSingIn()"> Sign in</a>
+      <button mat-stroked-button class="btn" (click)="openDialogSingUp()">Join</button>
 
 
     </mat-toolbar>
 
+    <mat-icon> score</mat-icon>
