--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -61,16 +61,12 @@
             <mat-label>Conferme Password</mat-label>
             <input type="password" (change)="progressFunction()"  matInput placeholder="Conferme Password" formControlName="confirmepassword"  [(ngModel)]="valuePasswordConfirme">
           </mat-form-field>
-
-            <div class="row_form"> {{valuePassword}}</div>
-            <div class="row_form"> {{valuePasswordConfirme}}</div>
-
      </div>
      
-     <div class="row_form">
+     <!-- <div class="row_form">
 
      <mat-progress-bar mode="determinate" [value]="progress" ></mat-progress-bar>
-    </div>
+    </div> -->
   
     
    
