--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 @import url("../node_modules/bootstrap/dist/css/bootstrap.css");
+@import 'ngx-toastr/toastr';
 html, body { height: 100%; }
 body { margin: 0}
