--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -7,13 +7,13 @@ $baseColor : #4361ee;
   background-color: #f3f2f2;
   box-shadow: 0 0 10px rgba(0,0,0,.2);
 }
-a{
-  text-decoration: none;
-  margin-right: 20px;
-  font-size: 16px;
-  color: #5f5f5f;
-}
 mat-toolbar{
+  a{
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 16px;
+    color: #5f5f5f;
+  }
   a:hover{
     transition: 0.3s;
     color: $baseColor;
@@ -44,6 +44,9 @@ mat-toolbar{
     color: #5f5f5f;
     margin-right: 25px;
     cursor: pointer;
+  }
+  .bi:hover{
+    color: $baseColor;
   }
 }
 
