--- a/src/app/account/profile/profile.component.scss
+++ b/src/app/account/profile/profile.component.scss
@@ -4,8 +4,11 @@
         border-radius: 100%;
         margin-bottom: 10px;
     }
-    card-title{
-        display: inline-block;
+    .card-title{
+        margin-right: 15px;
+    }
+    .bi{
         margin-right: 10px;
     }
+    
 }
