--- a/src/app/account/profile/profile.component.html
+++ b/src/app/account/profile/profile.component.html
@@ -55,12 +55,14 @@
                         <div class="row">
                             <div class="col"><b>Description </b> </div>
                             <div class="col-6"></div>
-                            <div class="col">
-                                <a class="button">Edit Description</a>  
+                            <div class="col">                           
+                                <a 
+                                    [hidden]="showEdit" 
+                                    (click)="toggleEdit()"
+                                >Edit Description</a> 
                             </div>
                         </div>
-
-                        
+                        <app-editinfos></app-editinfos>
                     </div>
                 </div>  
             </div>
