--- a/src/app/account/editinfos/editinfos.component.scss
+++ b/src/app/account/editinfos/editinfos.component.scss
@@ -1,3 +1,11 @@
 .card{
     background-color: #f4f4f4;
+    .input{
+        display: inline-block;
+        width: 100%;
+    }
+    .btnn{
+        margin: 5px;
+        width: 47%;
+    }
 }
