--- a/src/app/account/profile/profile.component.scss
+++ b/src/app/account/profile/profile.component.scss
@@ -1,3 +1,8 @@
+.card{
+    margin:10px auto;
+    width: 70%;
+}
+
 .card-body{
     img{
         width: 200px;
@@ -10,5 +15,13 @@
     .bi{
         margin-right: 10px;
     }
-    
+    a{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        color: #5f5f5f;
+      }
 }
+
+.mat-mdc-form-field + .mat-mdc-form-field {
+    margin-left: 8px;
+  }
