--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&display=swap');
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 @import url("../node_modules/bootstrap/dist/css/bootstrap.css");
 @import 'ngx-toastr/toastr';
 html, body { 
   height: 100%; 
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   text-decoration: none;
   margin-right: 20px;
   font-size: 16px;
