--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 
-    <mat-toolbar class="navbar">
+    <mat-toolbar class="navbar" >
       <button mat-button routerLink="/">
         GigHub
       </button>
@@ -8,6 +8,7 @@
 
       <!-- SIGNED USER -->
       <i 
+        matTooltip="Notification"
         class="bi position-relative" 
         *ngIf="isAuth"
         [ngClass]="valueB ? 'bi-bell ': 'bi-bell-fill'" 
@@ -19,6 +20,7 @@
         ></span>
       </i>
       <i 
+        matTooltip="Messages"
         class="bi position-relative"
         *ngIf="isAuth" 
         [ngClass]="valueE ? 'bi-envelope ': 'bi-envelope-fill'" 
@@ -30,7 +32,7 @@
         ></span>
       </i>
       <i 
-        
+      matTooltip="wishlist"
         *ngIf="isAuth"class="bi"
         [ngClass]="value ? 'bi-heart ': 'bi-heart-fill'" 
         (mouseover)="value=false" 
@@ -41,16 +43,17 @@
      
       <img src="../../../assets/pics/profilepic.jpeg" class="profilepic" [matMenuTriggerFor]="menu" *ngIf="isAuth">
       <mat-menu #menu="matMenu" class="menu">
-        <div class="p-3 divide-y divide-solid">
+        <div class="p-3 divide-y divide-solid" style="width: 250px;">
           <div class="pb-1 flex justify-between">
-            <a routerLink="/account/profile" class="a">Profile</a>
+            <a routerLink="/account/profile" class="a" mat-menu-item>Profile</a>
           </div>
           <mat-divider class="pb-2"></mat-divider>
           <div class="pb-1 flex justify-between">
-          <a routerLink="/" class="a">Settings</a> <br>
-          <a routerLink="/" class="a">Billing</a></div>
+          <a routerLink="/" class="a" mat-menu-item>Settings</a>
+          <a routerLink="/account/dashboard" class="a" mat-menu-item>Dashboard</a> 
+          <a routerLink="/" class="a" mat-menu-item>Billing</a></div>
           <mat-divider class="pt-2"></mat-divider>
-          <a routerLink="/" class="a" (click)="logOut()">Log out</a>
+          <a routerLink="/" class="a" (click)="logOut()" mat-menu-item>Log out</a>
         </div>
       </mat-menu>
 
