--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -4,7 +4,7 @@ $baseColor : #4361ee;
     flex: 1 1 auto;
 }
 .navbar{
-  background-color: #f3f2f2;
+  background-color: #fff;
   box-shadow: 0 0 10px rgba(0,0,0,.2);
 }
 mat-toolbar{
