--- a/src/app/account/editinfos/editinfos.component.scss
+++ b/src/app/account/editinfos/editinfos.component.scss
@@ -1,8 +1,9 @@
 .card{
-    background-color: #f4f4f4;
+    border: white;
     .input{
         display: inline-block;
-        width: 100%;
+        width: 70%;
+        margin: 3px auto;
     }
     .btnn{
         margin: 5px;
